--- a/main.html
+++ b/main.html
@@ -9,15 +9,22 @@
 <body>
 	<h1>Login Form</h1>
 	<form>
-		<label for="username">User Name:</label>
-		<input type="text" id="username" placeholder="Username"/>
-		<label for="username">Password:</label>
-		<input type="password" id="password" placeholder="Password"/>
-		<label for="checkbox">Remember me:</label>
-		<input type="checkbox" id="checkbox"/>
-		<input type="submit" id="submit" value="Submit"/>
-	</form>
-	<button id="existing" style="display:none;">Login as existing user</button>
+		<h1>Login Form</h1>
+
+  <form id="login-form">
+    <label for="username">Username:</label>
+    <input type="text" id="username" placeholder="Username"/>
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" placeholder="Password"/>
+
+    <label for="checkbox">Remember me:</label>
+    <input type="checkbox" id="checkbox"/>
+
+    <input type="submit" id="submit" value="Submit"/>
+  </form>
+
+  <button id="existing" style="display:none;">Login as existing user</button>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
