--- a/main.html
+++ b/main.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Remember Me: Login Form</title>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
-
 <body>
-	<h1>Login Form</h1>
-	<form>
-		<h1>Login Form</h1>
+  <h1>Login Form</h1>
 
   <form id="login-form">
     <label for="username">Username:</label>
@@ -25,10 +23,7 @@
   </form>
 
   <button id="existing" style="display:none;">Login as existing user</button>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <script src="./script.js"></script>
 </body>
-
 </html>
